# mlsc-timetable-backend

./: pyproject.toml  readme.md
timetable_api/: __init__.py  _store.py  app.py  config.py  schemas.py
timetable_api/_parser/: __init__.py
timetable_api/_parser/core/: __init__.py  confidence.py  elective_parser.py  models.py  sheet_geometry.py  subject_catalog.py  subject_parser.py
timetable_api/_parser/extractors/: __init__.py  batch.py  class_blocks.py  day_slots.py
timetable_api/_parser/serializers/: __init__.py  json.py
